--- a/Final/queries.css
+++ b/Final/queries.css
@@ -32,6 +32,10 @@
     font-size: 2.8rem;
   }
   /* MAP METHOD ENDING*/
+  .push-pop-array {
+    gap: 1.5rem;
+  }
+  /* PUSH POP METHOD ENDing */
 }
 
 /* UNDER 1200PX Computers */
@@ -89,6 +93,10 @@
     font-size: 2.4rem;
   }
   /* MAP METHOD ENDING*/
+  .push-pop-array {
+    gap: 1rem;
+  }
+  /* PUSH POP METHOD ENDing */
 }
 
 /* UNDER 600PX MOBILES */
