--- a/Final/custom.css
+++ b/Final/custom.css
@@ -111,7 +111,7 @@ input {
 
 .countries-container {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 1fr;
   gap: 2rem;
   margin-top: 1rem;
 }
@@ -292,3 +292,69 @@ span {
 }
 
 /* SHIFT AND UNSHIFT METHODS END */
+
+.red-array-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.red-array-item {
+  border: 0.3rem solid #161616;
+  padding: 1rem;
+  border-radius: 1rem;
+  width: 5rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.reduce-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.reduce-input-container {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+#reduce-select {
+  padding: 1rem;
+  font-size: 1.8rem;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.reduce-output-container {
+  margin-top: 1rem;
+  /*  */
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  justify-items: center;
+  align-items: center;
+}
+
+.red-span {
+  font-weight: bold;
+  font-size: 3rem;
+}
+
+.red-result-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.red-list {
+  border-left: 0.3rem solid #161616;
+  border-right: 0.3rem solid #161616;
+  padding: 1rem;
+  border-radius: 1rem;
+  margin: 2.5rem 0;
+  font-size: 2rem;
+}
+/* REDUCE END */
