--- a/Final/queries.css
+++ b/Final/queries.css
@@ -32,10 +32,22 @@
     font-size: 2.8rem;
   }
   /* MAP METHOD ENDING*/
+
+  .push-pop-method {
+    flex-direction: row;
+  }
   .push-pop-array {
     gap: 1.5rem;
   }
   /* PUSH POP METHOD ENDing */
+  label {
+    font-size: 2rem;
+  }
+  /* REDUCE ENDING */
+  .red-result-container {
+    flex-direction: row;
+    width: 30rem;
+  }
 }
 
 /* UNDER 1200PX Computers */
@@ -69,6 +81,11 @@
   }
 
   /* SHIFT AND UNSHIFT METHODS END */
+  label {
+    font-size: 2rem;
+  }
+
+  /* REDUCE ENDING */
 }
 
 /* UNDER 900PX Tabs */
@@ -102,10 +119,17 @@
     font-size: 2.4rem;
   }
   /* MAP METHOD ENDING*/
+  .push-pop-method {
+    flex-direction: column;
+  }
+
   .push-pop-array {
     gap: 1rem;
   }
   /* PUSH POP METHOD ENDing */
+  .shift-unshift-container {
+    flex-direction: column;
+  }
   .shift-container {
     gap: 0.75rem;
   }
@@ -114,6 +138,13 @@
   }
 
   /* SHIFT AND UNSHIFT METHODS END */
+  label {
+    font-size: 1.4rem;
+  }
+  .red-result-container {
+    flex-direction: column;
+  }
+  /* REDUCE ENDING */
 }
 
 /* UNDER 600PX MOBILES */
@@ -139,4 +170,10 @@
     font-size: 1.6rem;
   }
   /* MAP METHOD ENDING*/
+
+  /* SHIFT AND UNSHIFT METHODS END */
+  label {
+    font-size: 1.6rem;
+  }
+  /* REDUCE ENDING */
 }
